blog page commit

--- a/style/blog/style.css
+++ b/style/blog/style.css
@@ -1,10 +1,10 @@
-body {
-  background: #ccc url("../images/photography.png") repeat;
+/* body {
+  background: url("../images/photography.png") repeat;
   font-family: "Inconsolata", SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   font-weight: 300;
   font-size: 18px;
   line-height: 1.9;
-  color: #6c757d; }
+  color: #6c757d; } */
 
 a {
   -webkit-transition: .3s all ease;
@@ -96,7 +96,9 @@ header {
         color: #fff; }
       header .navbar .dropdown-menu a {
         padding-top: 7px;
-        padding-bottom: 7px; }
+        padding-bottom: 7px;
+       }
+    
 
 .absolute-toggle {
   position: absolute;
